--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  BODY {
 		COLOR : auto;
 		background-color: yellow;
-		background-image :url("images/backgroundweb.jpg");
+		background-image :url("backgroundweb.jpg");
 		background-position: center;
 		margin : 0px;
 		}
@@ -20,7 +20,7 @@
 		}
 	  header {
           	height: 220px;
-          	background-image: url(images/logao.jpg);
+          	background-image: url(logao.jpg);
 		}
           h1 {
           	text-indent: -9999px;
@@ -125,7 +125,7 @@
 		Section Courses
 		<article>Artikel
 			<figure>
-			   <img src="images/nasigoreng.jpg" alt="Gambar Nasi Goreng" />
+			   <img src="nasigoreng.jpg" alt="Gambar Nasi Goreng" />
 			   <figcaption>Nasi Goreng</figcaption>
 			</figure>
 			<hgroup>
@@ -137,7 +137,7 @@
 		</article>
 		<article>Artikel
 			<figure>
-			   <img src="images/pempek.jpg" alt="Gambar Pempek" />
+			   <img src="pempek.jpg" alt="Gambar Pempek" />
 			   <figcaption>Pempek</figcaption>
 			</figure>
 			<hgroup>
@@ -150,7 +150,7 @@
 		</article>
 		<article>Artikel
 			<figure>
-			   <img src="images/nasikuning.jpg" alt="Gambar Nasi Tumpeng" />
+			   <img src="nasikuning.jpg" alt="Gambar Nasi Tumpeng" />
 			   <figcaption>Nasi Tumpeng</figcaption>
 			</figure>
 			<hgroup>
