--- a/masakanlain.html
+++ b/masakanlain.html
@@ -8,7 +8,7 @@
 	  BODY {
 		COLOR : auto;
 		background-color: yellow;
-		background-image :url("images/backgroundweb.jpg");
+		background-image :url("backgroundweb.jpg");
 		background-position: center;
 		margin : 0px;
 		}
@@ -20,7 +20,7 @@
 		}
 	  header {
           	height: 220px;
-          	background-image: url(images/logao.jpg);
+          	background-image: url(logao.jpg);
 		}
           h1 {
           	text-indent: -9999px;
@@ -124,7 +124,7 @@
 		
 		<article>
                        <figure>
-                           <img src="images/papeda.jpg" alt="Gambar Papeda" />
+                           <img src="papeda.jpg" alt="Gambar Papeda" />
                            <figcaption>Papeda</figcaption>
                        </figure>
                        <hgroup>
@@ -136,7 +136,7 @@
 		</article>
 		<article>
                        <figure>
-                           <img src="images/perkedel.jpg" alt="Gambar Perkedel" />
+                           <img src="perkedel.jpg" alt="Gambar Perkedel" />
                            <figcaption>Perkedel</figcaption>
                        </figure>
                        <hgroup>
