--- a/katering.html
+++ b/katering.html
@@ -8,7 +8,7 @@
 	  BODY {
 		COLOR : auto;
 		background-color: yellow;
-		background-image :url("images/backgroundweb.jpg");
+		background-image :url("backgroundweb.jpg");
 		background-position: center;
 		margin : 0px;
 		}
@@ -20,7 +20,7 @@
 		}
 	  header {
           	height: 220px;
-          	background-image: url(images/logao.jpg);
+          	background-image: url(logao.jpg);
 		}
           h1 {
           	text-indent: -9999px;
@@ -125,7 +125,7 @@
 		Section Courses
 		<article>Artikel
 			<figure>
-			   <img src="images/paket1.JPG" alt="Gambar Paket 1" />
+			   <img src="paket1.JPG" alt="Gambar Paket 1" />
 			   <figcaption>Paket 1</figcaption>
 			</figure>
 			<hgroup>
@@ -136,7 +136,7 @@
 		</article>
 		<article>Artikel
 			<figure>
-			   <img src="images/Paket2.jpg" alt="Gambar Paket 2" />
+			   <img src="Paket2.jpg" alt="Gambar Paket 2" />
 			   <figcaption>Paket 2</figcaption>
 			</figure>
 			<hgroup>
