--- a/kontak.html
+++ b/kontak.html
@@ -8,7 +8,7 @@
 	  BODY {
 		COLOR : auto;
 		background-color: yellow;
-		background-image :url("images/backgroundweb.jpg");
+		background-image :url("backgroundweb.jpg");
 		background-position: center;
 		margin : 0px;
 		}
@@ -20,7 +20,7 @@
 		}
 	  header {
           	height: 220px;
-          	background-image: url(images/logao.jpg);
+          	background-image: url(logao.jpg);
 		}
           h1 {
           	text-indent: -9999px;
